src/test/ui/typeck/typeck-auto-trait-no-supertraits-2.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:3:20
   |
LL | auto trait Magic : Sized where Option<Self> : Magic {}
   |            -----   ^^^^^ help: remove the super traits
   |            |
   |            auto trait cannot have super traits

error: aborting due to previous error

For more information about this error, try `rustc --explain E0568`.
